border radius fixed on mobiles

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -7,6 +7,7 @@
   @media (max-width: 767px) {
     width: calc(100vw - 40px);
     margin: 30px auto 50px auto;
+    border-radius: 12px;
   }
 
   @media (min-width: 800px) and (max-width: 1280px) {
